Fix bugs with enabling / disabling link hint mode

--- a/Info.plist
+++ b/Info.plist
@@ -23,6 +23,10 @@
 	</dict>
 	<key>Content</key>
 	<dict>
+		<key>Blacklist</key>
+		<array>
+			<string>https://docs.google.com/*</string>
+		</array>
 		<key>Scripts</key>
 		<dict>
 			<key>End</key>
