--- a/vimple.safariextension/Info.plist
+++ b/vimple.safariextension/Info.plist
@@ -38,7 +38,7 @@
 	<key>Description</key>
 	<string>vim keybindings for Safari</string>
 	<key>DeveloperIdentifier</key>
-	<string>0000000000</string>
+	<string>ZR23WUKXP7</string>
 	<key>ExtensionInfoDictionaryVersion</key>
 	<string>1.0</string>
 	<key>Permissions</key>
