--- a/vimple.safariextension/Info.plist
+++ b/vimple.safariextension/Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>1.0</string>
 	<key>Chrome</key>
 	<dict>
 		<key>Global Page</key>
@@ -31,7 +31,7 @@
 		<dict>
 			<key>End</key>
 			<array>
-				<string>js/main.js</string>
+				<string>main.js</string>
 			</array>
 		</dict>
 	</dict>
@@ -51,5 +51,9 @@
 			<string>All</string>
 		</dict>
 	</dict>
+	<key>Update Manifest URL</key>
+	<string>https://github.com/logandaniels/vimple/raw/v1/UpdateManifest.plist</string>
+	<key>Website</key>
+	<string>https://github.com/logandaniels/vimple</string>
 </dict>
 </plist>
